--- a/packages/google_sign_in_service/pubspec.yaml
+++ b/packages/google_sign_in_service/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
     sdk: flutter
   google_sign_in: ^4.5.6
   firebase_auth_service:
-    path: ../firebase_auth_service
+    git:
+      url: https://github.com/ie-devteam/flutter_services
+      path: packages/firebase_auth_service
 
 dev_dependencies:
   flutter_test:
